# triples-cli

./: Cargo.toml  justfile  null
examples/: org.ttl  people.csv  queries.sparql  relationships.ttl  tutorial.sh  workflow.sh
src/: csv2ttl.rs  error.rs  graph.rs  lib.rs  main.rs  merge.rs  query.rs  repl.rs
