[package]
name = "triples-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A file-oriented CLI for RDF triples: convert, merge, and query TTL files"
keywords = ["rdf", "turtle", "sparql", "cli", "semantic-web"]
repository = "https://github.com/navicore/triples-cli"

[lib]
name = "triples_cli"
path = "src/lib.rs"

[[bin]]
name = "triples-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
oxigraph = "0.4"
rustyline = "15"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
